# EDAI-0002-PRIMEIROS-PASSOS-LANGCHAIN

./: Agentes.ipynb  ChainAssistente.ipynb  LCEL.ipynb  LLMs.ipynb  LoadersSplitters.ipynb  OCORRENCIAS_2024.csv  OutputParser.ipynb  PromptTemplate.ipynb  README.md  Tools.ipynb  pyproject.toml
Excalidraws/: GeralLNGC.md  Material.md
