[project]
name = "cursolangchain"
version = "0.1.0"
description = ""
authors = [
    {name = "João Fassina",email = "jpfassina@live.com"}
]
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "langchain-openai (>=0.3.2,<0.4.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "langgraph (>=0.2.67,<0.3.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain-community (>=0.3.15,<0.4.0)",
    "pypdf (>=5.2.0,<6.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "langchain-unstructured (>=0.1.6,<0.2.0)",
    "chardet (>=5.2.0,<6.0.0)",
    "langchain-chroma (>=0.2.0,<0.3.0)",
    "wikipedia (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false